feat(title): Add TitleScene implementation.
- Add TitleScene class to display title and simple message,
- modify main app to manage scene switching,
- update PlayScene to add link to TitleScene by pressing [F12].

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -4,3 +4,6 @@ app.camera.name=Camera 01
 app.dialog.button.ok=Yes [Y]
 app.dialog.button.cancel=No [N]
 app.dialog.exit.message=Do you want to exit?
+app.scene.title.game.title=Demo01 2D platform
+app.scene.title.welcome.message=Press [ENTER] or [SPACE] to start
+app.scene.title.copyright.message=(c) August 2024 - SnapGames - F.Delorme
