feat(Menu): Add Menu and Item entities
- implements MenuObject and the ItemObject to design some multiple choice entry
- implements the MenuObjectRendererPlugin and the ItemObjectRendererPlugin.
- Add javadoc on RendererPlugin.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,3 +7,6 @@ app.dialog.exit.message=Do you want to exit?
 app.scene.title.game.title=Demo01 2D platform
 app.scene.title.welcome.message=Press [ENTER] or [SPACE] to start
 app.scene.title.copyright.message=(c) August 2024 - SnapGames - F.Delorme
+app.scene.title.menu.choose=Please choose an option
+app.scene.title.menu.option.start=Start a new game
+app.scene.title.menu.option.quit=Exit
