--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,11 +1,10 @@
 app.name=Demo01
 app.version=1.0.0
 app.camera.name=Camera 01
-app.dialog.button.ok=Yes [Y]
-app.dialog.button.cancel=No [N]
+app.dialog.button.ok=Ok
+app.dialog.button.cancel=Cancel
 app.dialog.exit.message=Do you want to exit?
 app.scene.title.game.title=Demo01 2D platform
-app.scene.title.welcome.message=*Use [^] / [v] then [ENTER] or [SPACE]
 app.scene.title.copyright.message=(c) 05-SEP-2024 - SnapGames - F. Delorme
 app.scene.title.menu.choose=Please choose an option
 app.scene.title.menu.option.start=Start a new game
